# CompRL

./: .gitignore  README.md  pyproject.toml
comp_rl/: __init__.py
comp_rl/environments/: __init__.py  lift.py  pick_place.py
scripts/: config.py  eval.py  train.py
scripts/utils/: util.py
